fix: change from 'of' to 'Array.asList'