@@ -1,14 +1,13 @@
 package leetcode;
 
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 public class LC0345_Reverse_Vowels_of_a_String {
     public String reverseVowels(String s) {
         int start = 0;
         int end = s.length() - 1;
 
-        Set<Character> set = new HashSet<>(Set.of('a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U'));
+        Set<Character> set = new HashSet<>(Arrays.asList('a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U'));
 
         StringBuilder sb = new StringBuilder(s);
         while (start < end) {
